common/styles/scss/_markdown-container.scss
.markdown-container {

    // NOTE related PR: https://github.com/informatics-isi-edu/chaise/pull/882
    // might not be needed anymore
    .recordset-table td & img {
        overflow-x: hidden;
    }

    & > p:last-child {
        margin-bottom: 0;
    }

    code {
        padding-left: 0;
        padding-right: 0;
        color: #333;
        background-color: #F5F5F5;
    }

    img {
        margin: 5px 5px 5px 0;
    }

    figure {
        figcaption {
            min-height: 20px;
        }

        .figcaption-wrapper {
            min-height: 35px; // to account for margin + button height since button is "floating"
            margin-top: 5px;

            figcaption {
                display: inline;
            }
        }

        .iframe-btn-container {
            text-align: right;
            margin-top: 5px;

            .chaise-btn.chaise-btn-iframe {
                border: 2px solid #ccc;
                border-bottom: none;
                border-bottom-right-radius: 0px;
                border-bottom-left-radius: 0px;
            }

            .chaise-btn-iframe:hover {
                text-decoration: none;
            }
        }

        // override the browser's default border
        iframe {
            border: 2px solid #ccc;
        }
    }

    .chaise-autofill {
        height: 90%;
        height: -webkit-fill-available;
        height: -moz-available;
        width: 100%;
        width: -webkit-fill-available;
        width: -moz-available;
    }

    // chaise-color-preview
    .chaise-color-preview {
        display: inline-block;
        height: 11px;
        width: 11px;
        border-radius: 3px;
        border: 1px solid $black-color;
    }

    .vocab {
        color: darkblue;
        background-color: rgba(220, 220, 220, 0.68);
        padding: 7px;
        border-radius: 10px;
        display: inline-block;
        margin: 2px;
    }

    ul.chaise-list-csv {
        list-style: none;
        display: inline;
        li {
            display: inline;
            > p {
                display: inline;
            }

            margin: 0 !important;

            &:after {
                content: ", ";
            }
            &:last-child:after {
                content: "";
            }
        }
    }



    a.download {
        @include chaise-btn();
        @include chaise-btn-primary();
    }

    a.download-alt {
        @include download-btn();
    }

    .asset-source-description {
        font-size: 85%;
    }

    ul {
        list-style-type: disc;
    }

    ol {
        list-style-type: decimal;
    }

    ol, ul {
        padding: 0 !important;
        /*existing rule is padding=2, which should be changed for the other changes*/

        > li {
            margin-left: 1em;
            padding-left: 0;

            &:before {

            }

            list-style: inherit;
            &:only-child {
                margin-left: 0;
                list-style: none;
            }
        }
    }
}

/*
  Markdown rendering style is based on github styling from https://github.com/sindresorhus/github-markdown-css/blob/gh-pages/github-markdown.css
  Changing this file will override any default style.
  Original code has a different name for the class, this has been changed to  markdown-container for chaise application.
*/

.markdown-container hr::after,
.markdown-container::after {
    clear: both
}

.markdown-container .pl-c {
    color: #6a737d
}

.markdown-container .pl-c1,
.markdown-container .pl-s .pl-v {
    color: #005cc5
}

.markdown-container .pl-e,
.markdown-container .pl-en {
    color: #6f42c1
}

.markdown-container .pl-s .pl-s1,
.markdown-container .pl-smi {
    color: #24292e
}

.markdown-container .pl-ent {
    color: #22863a
}

.markdown-container .pl-k {
    color: #d73a49
}

.markdown-container .pl-pds,
.markdown-container .pl-s,
.markdown-container .pl-s .pl-pse .pl-s1,
.markdown-container .pl-sr,
.markdown-container .pl-sr .pl-cce,
.markdown-container .pl-sr .pl-sra,
.markdown-container .pl-sr .pl-sre {
    color: #032f62
}

.markdown-container .pl-smw,
.markdown-container .pl-v {
    color: #e36209
}

.markdown-container .pl-bu {
    color: #b31d28
}

.markdown-container .pl-ii {
    color: #fafbfc;
    background-color: #b31d28
}

.markdown-container .pl-c2 {
    color: #fafbfc;
    background-color: #d73a49
}

.markdown-container .pl-c2::before {
    content: "^M"
}

.markdown-container .pl-sr .pl-cce {
    font-weight: 700;
    color: #22863a
}

.markdown-container .pl-ml {
    color: #735c0f
}

.markdown-container .pl-mh,
.markdown-container .pl-mh .pl-en,
.markdown-container .pl-ms {
    font-weight: 700;
    color: #005cc5
}

.markdown-container .pl-mi {
    font-style: italic;
    color: #24292e
}

.markdown-container .pl-mb {
    font-weight: 700;
    color: #24292e
}

.markdown-container .pl-md {
    color: #b31d28;
    background-color: #ffeef0
}

.markdown-container .pl-mi1 {
    color: #22863a;
    background-color: #f0fff4
}

.markdown-container .pl-mc {
    color: #e36209;
    background-color: #ffebda
}

.markdown-container .pl-mi2 {
    color: #f6f8fa;
    background-color: #005cc5
}

.markdown-container .pl-mdr {
    font-weight: 700;
    color: #6f42c1
}

.markdown-container .pl-ba {
    color: #586069
}

.markdown-container .pl-sg {
    color: #959da5
}

.markdown-container .pl-corl {
    text-decoration: underline;
    color: #032f62
}

.markdown-container .octicon {
    display: inline-block;
    fill: currentColor;
    vertical-align: text-bottom
}

.markdown-container hr::after,
.markdown-container hr::before,
.markdown-container::after,
.markdown-container::before {
    display: table;
    content: ""
}

.markdown-container a {
    background-color: transparent;
    color: #0366d6;
    text-decoration: none
}

.markdown-container a:active,
.markdown-container a:hover {
    outline-width: 0
}

.markdown-container h1 {
    margin: .67em 0
}
/* ... */

